Alignment fixed

--- a/src/app/components/shared/home/home.component.css
+++ b/src/app/components/shared/home/home.component.css
@@ -1,3 +1,9 @@
+:host {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 @media (min-width: 768px) {
   #sub-container {
     width: 75%;
